--- a/rootfs/usr/local/qisda/etc/QBookApp.default.ini
+++ b/rootfs/usr/local/qisda/etc/QBookApp.default.ini
@@ -1,4 +1,60 @@
-; QBookApp.ini
+[book]
+font-demo9789038893846.epub=Bookman Old Style
+font-demo9789047201342.epub=Bookman Old Style
+font-pg1661.epub=Bookman Old Style
+lastView=
+last_read_next_index=168
+pageMode-OYO%20Handbuch.pdf=0
+pageMode-OYO_Thalia_Handbuch.pdf=0
+zoom-demo9789038893846.epub=3
+zoom-demo9789047201342.epub=3
+zoom-pg1661.epub=3
+
+[brand]
+name=techinc
+
+[font]
+default=PMN Caecilia LT
+
+[font.fallbacks]
+Droid%20Sans=PMN Caecilia LT
+Droid%20Sans%20Mono=PMN Caecilia LT
+Droid%20Serif=PMN Caecilia LT
+Global%20Fallbacks=PMN Caecilia LT
+SimSun=PMN Caecilia LT
+
+[font.substitutions]
+Arial=PMN Caecilia LT
+DejaVu%20Sans=PMN Caecilia LT
+DejaVu%20Sans%20Mono=PMN Caecilia LT
+DejaVu%20Serif=PMN Caecilia LT
+PMingLiU=PMN Caecilia LT
+Thai=PMN Caecilia LT
+helvetica=PMN Caecilia LT
+
+[image]
+bgmusic\file=
+bgmusic\name=None
+bgmusic\switcher=false
+repeat\switcher=false
+sort_type=1
+t_interval=3000
+
+[music]
+curr_index=-999
+last_index=-999
+pause_state=false
+play_all=false
+play_state=false
+repeat_one=false
+repeat_type=0
+shuffle=false
+size=0
+sort_type=1
+
+[reader]
+text-language=nl_NL
+
 [setting]
 3G\support=true
 wifi\wifion=false
@@ -31,165 +87,22 @@ zonecity=5
 turn_page_R2L=true
 orientation=auto
 
-[proxy]
-enabled=true
-type=3
-hostName=thaliaproxy.adaptive-navigation.com
-port=80
-userName=
-password=
-onWlan=false
-
-[image]
-repeat\switcher=false
-bgmusic\switcher=false
-bgmusic\file=""
-bgmusic\name=""
-t_interval=3000
-sort_type=1
-
-[music]
-repeat_type=0
-repeat_one=false
-play_all=false
-shuffle=false
-play_state=false
-pause_state=false
-curr_index=-999
-last_index=-999
-size=0
-sort_type=1
-
-[reader]
-text-language=de_DE
-
-[font]
-default=PMN Caecilia LT
-
-[font.substitutions]
-helvetica=PMN Caecilia LT
-Arial=PMN Caecilia LT
-PMingLiU=PMN Caecilia LT
-DejaVu%20Sans=PMN Caecilia LT
-DejaVu%20Sans%20Mono=PMN Caecilia LT
-DejaVu%20Serif=PMN Caecilia LT
-Thai=PMN Caecilia LT
-
-[font.fallbacks]
-Droid%20Sans=PMN Caecilia LT
-Droid%20Sans%20Mono=PMN Caecilia LT
-Droid%20Serif=PMN Caecilia LT
-SimSun=PMN Caecilia LT
-Global%20Fallbacks=PMN Caecilia LT
-
-[book]
-lastView=
-pageMode-OYO_Thalia_Handbuch.pdf=0
-pageMode-OYO Handbuch.pdf=0
-
-[brand]
-name=chapitre
- 
-[thalia]
-default_language=de
-default_text_language=de_DE
-default_orientation=auto
-default_zoneregion=6
-default_zonecity=5
-registration_url=https://server.meinoyo.com/ThaliaShopServlet/registration/welcome.jsp
-shop_url=http://server.meinoyo.com/ThaliaShopServlet/shop/start.jsp
-my_account_url=https://server.meinoyo.com/ThaliaShopServlet/account/login.jsp
-update_url="http://server.meinoyo.com/ThaliaShopServlet/update/index.jsp?brand="
-expected_host=server.meinoyo.com
-supports_ota_updates=true
-requires_upfront_registration=true
-has_my_account=true
-has_personalized_home_screen=true
-has_adobe_website_link=false
-has_open_web_browser=true
-supported_languages=de,en
-default_zoom_level=1
-
-[buch]
-default_language=de
-default_text_language=de_DE
-default_orientation=auto
-default_zoneregion=6
-default_zonecity=5
-registration_url=https://server.meinoyo.com/ThaliaShopServlet/registration/welcome.jsp
-shop_url=http://server.meinoyo.com/ThaliaShopServlet/shop/start.jsp
-my_account_url=https://server.meinoyo.com/ThaliaShopServlet/account/login.jsp
-update_url="http://server.meinoyo.com/ThaliaShopServlet/update/index.jsp?brand="
-expected_host=server.meinoyo.com
-supports_ota_updates=true
-requires_upfront_registration=true
-has_my_account=true
-has_personalized_home_screen=true
-has_adobe_website_link=false
-has_open_web_browser=true
-supported_languages=de,en
-default_zoom_level=1
-
-[selexyz]
-default_language=nl
-default_text_language=nl_NL
-default_orientation=auto
-default_zoneregion=6
-default_zonecity=0
-registration_url=
-shop_url="http://selexyz-oyo.epagine.nl/?a=home"
-my_account_url=
-update_url=http://www.oyo.nl/support/firmware/
-expected_host=selexyz-oyo.epagine.nl,ws.epagine.nl,www.oyo.nl
-supports_ota_updates=true
-requires_upfront_registration=false
-has_my_account=false
-has_personalized_home_screen=false
-has_adobe_website_link=true
-has_open_web_browser=true
-supported_languages=nl,en
-default_zoom_level=1
-
-[empik]
-default_language=pl
-default_text_language=pl_PL
-default_orientation=auto
-default_zoneregion=6
-default_zonecity=55
-registration_url=
-shop_url=http://digital.empik.com
-my_account_url=
-update_url=http://digital.empik.com/oyo/update
-expected_host=digital.empik.com
-supports_ota_updates=true
-requires_upfront_registration=false
-has_my_account=false
-has_personalized_home_screen=false
-has_adobe_website_link=true
-has_open_web_browser=false
-supported_languages=pl,en
-default_zoom_level=1
-ui_font=Droid Sans
-ui_font_windows=Droid Sans
-browser_font=Droid Sans
-browser_font_windows=Droid Sans
-
-[chapitre]
-default_language=fr
-default_text_language=fr_FR
+[techinc]
+default_language=en
 default_orientation=portrait
+default_text_language=nl_NL
+default_zonecity=0
 default_zoneregion=6
-default_zonecity=34
-registration_url=https://chapitreoyo.adaptive-navigation.com/ChapitreShopServlet/registration/welcome.jsp
-shop_url=http://chapitreoyo.adaptive-navigation.com/ChapitreShopServlet/shop/start.jsp
-my_account_url=https://chapitreoyo.adaptive-navigation.com/ChapitreShopServlet/account/login.jsp
-update_url=http://chapitreoyo.adaptive-navigation.com/update/
-expected_host=chapitreoyo.adaptive-navigation.com
-supports_ota_updates=true
-requires_upfront_registration=false
-has_my_account=true
-has_personalized_home_screen=false
+default_zoom_level=1
+expected_host=
 has_adobe_website_link=false
-has_open_web_browser=false
-supported_languages=fr,de,en
-default_zoom_level=5
+has_my_account=false
+has_open_web_browser=true
+has_personalized_home_screen=false
+my_account_url=
+registration_url=
+requires_upfront_registration=false
+shop_url=
+supported_languages=en,nl
+supports_ota_updates=true
+update_url=http://wiki.techinc.nl/index.php/OYO_Hacking/OTA
